Support SortExpression in functions